--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,23 +7,23 @@ license = "MIT OR Apache-2.0"
 publish = false
 
 [dependencies]
-reth = { git = "https://github.com/paradigmxyz/reth" }
-reth-exex = { git = "https://github.com/paradigmxyz/reth", features = ["serde"] }
-reth-node-api = { git = "https://github.com/paradigmxyz/reth" }
-reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth" }
-reth-tracing = { git = "https://github.com/paradigmxyz/reth" }
+reth = { git = "https://github.com/paradigmxyz/reth", rev = "d599393"}
+reth-exex = { git = "https://github.com/paradigmxyz/reth", rev = "d599393", features = ["serde"] }
+reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "d599393" }
+reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "d599393" }
+reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "d599393" }
 
 eyre = "0.6"
 
-tonic = "0.11"
-prost = "0.12"
+tonic = "0.12"
+prost = "0.13"
 tokio = { version = "1.0", features = ["full"] }
 tokio-stream = "0.1"
 
 bincode = "1.3"
 
 [build-dependencies]
-tonic-build = "0.11"
+tonic-build = "0.12"
 
 [dev-dependencies]
 reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth" }
