--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,89 +1,60 @@
-name: CI
+name: Loom
+
 on:
   push:
-    branches: [main]
-  pull_request:
+    branches:
+      - main
+  pull_request_target:
+    types: [opened,synchronize,reopened]
+    branches:
+      - main
+
 env:
   CARGO_TERM_COLOR: always
+
 jobs:
   test:
-    name: test ${{ matrix.rust }} ${{ matrix.flags }}
+    if: github.repository == 'dexloom/reth-exex-grpc'
+    name: make test
     runs-on: ubuntu-latest
-    timeout-minutes: 30
-    strategy:
-      fail-fast: false
-      matrix:
-        rust: ["stable", "nightly", "1.79"] # MSRV
-        flags: ["", "--all-features"]
     steps:
-      - uses: actions/checkout@v3
-      - uses: dtolnay/rust-toolchain@master
-        with:
-          toolchain: ${{ matrix.rust }}
-      - uses: Swatinem/rust-cache@v2
-        with:
-          cache-on-failure: true
-      - uses: arduino/setup-protoc@v3
-        with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-      # Only run tests on latest stable and above
-      - name: build
-        if: ${{ matrix.rust == '1.79' }} # MSRV
-        run: cargo build --workspace ${{ matrix.flags }}
-      - name: test
-        if: ${{ matrix.rust != '1.79' }} # MSRV
-        run: cargo test --workspace ${{ matrix.flags }}
-  feature-checks:
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-    steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
-      - uses: taiki-e/install-action@cargo-hack
       - uses: Swatinem/rust-cache@v2
-        with:
-          cache-on-failure: true
       - uses: arduino/setup-protoc@v3
-        with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-      - name: cargo hack
-        run: cargo hack check --feature-powerset --depth 2
-  clippy:
+
+      - run: make test
+
+  fmt:
+    if: github.repository == 'dexloom/reth-exex-grpc'
+    name: make fmt-check
     runs-on: ubuntu-latest
-    timeout-minutes: 30
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+
+      - run: make fmt-check
+
+  clippy:
+    if: github.repository == 'dexloom/reth-exex-grpc'
+    name: make clippy
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@clippy
       - uses: Swatinem/rust-cache@v2
-        with:
-          cache-on-failure: true
       - uses: arduino/setup-protoc@v3
-        with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-      - run: cargo clippy --workspace --all-targets --all-features
-        env:
-          RUSTFLAGS: -Dwarnings
-  docs:
+
+      - run: make clippy
+
+  deny:
+    if: github.repository == 'dexloom/reth-exex-grpc'
+    name: cargo deny check
     runs-on: ubuntu-latest
-    timeout-minutes: 30
     steps:
-      - uses: actions/checkout@v3
-      - uses: dtolnay/rust-toolchain@nightly
-      - uses: Swatinem/rust-cache@v2
+      - uses: actions/checkout@v4
+      - uses: EmbarkStudios/cargo-deny-action@v1
         with:
-          cache-on-failure: true
-      - uses: arduino/setup-protoc@v3
-        with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-      - run: cargo doc --workspace --all-features --no-deps --document-private-items
-        env:
-          RUSTDOCFLAGS: "--cfg docsrs -D warnings"
-  fmt:
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-    steps:
-      - uses: actions/checkout@v3
-      - uses: dtolnay/rust-toolchain@nightly
-        with:
-          components: rustfmt
-      - run: cargo fmt --all --check
+          log-level: warn
+          command: check
+          arguments: --all-features
