--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "example-exex-remote"
+name = "reth-exex-grpc"
 version = "0.2.0"
 edition = "2021"
 rust-version = "1.81"
@@ -9,14 +9,14 @@ publish = false
 [dependencies]
 alloy = { version = "0.4.2", features = ["rpc-types", "rpc-types-trace", "consensus", "eips"] }
 
-reth = { git = "https://github.com/paradigmxyz/reth" }
-reth-exex = { git = "https://github.com/paradigmxyz/reth", features = ["serde"] }
-reth-node-api = { git = "https://github.com/paradigmxyz/reth" }
-reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth" }
-reth-tracing = { git = "https://github.com/paradigmxyz/reth" }
-reth-execution-types = { git = "https://github.com/paradigmxyz/reth" }
-reth-rpc-types-compat = { git = "https://github.com/paradigmxyz/reth" }
-reth-primitives = { git = "https://github.com/paradigmxyz/reth" }
+reth = { git = "https://github.com/paradigmxyz/reth", tag="v1.0.8" }
+reth-exex = { git = "https://github.com/paradigmxyz/reth", tag="v1.0.8", features = ["serde"] }
+reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag="v1.0.8" }
+reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag="v1.0.8" }
+reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag="v1.0.8" }
+reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag="v1.0.8" }
+reth-rpc-types-compat = { git = "https://github.com/paradigmxyz/reth", tag="v1.0.8" }
+reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag="v1.0.8" }
 
 futures-util = "0.3.30"
 
@@ -34,13 +34,7 @@ bincode = "1.3"
 tonic-build = "0.12"
 
 [dev-dependencies]
-reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth" }
-
-
-
-[features]
-default = []
-
+reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth", tag="v1.0.8" }
 
 [[bin]]
 name = "exex_grpc_node"
