--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,14 +14,14 @@ alloy-rpc-types = "0.4.2"
 alloy-rpc-types-trace = "0.4.2"
 
 
-reth = { git = "https://github.com/paradigmxyz/reth", tag="v1.1.0" }
-reth-exex = { git = "https://github.com/paradigmxyz/reth", tag="v1.1.0", features = ["serde"] }
-reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag="v1.1.0" }
-reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag="v1.1.0" }
-reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag="v1.1.0" }
-reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag="v1.1.0" }
-reth-rpc-types-compat = { git = "https://github.com/paradigmxyz/reth", tag="v1.1.0" }
-reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag="v1.1.0" }
+reth = { git = "https://github.com/paradigmxyz/reth",rev="9c8360e" }
+reth-exex = { git = "https://github.com/paradigmxyz/reth",rev="9c8360e", features = ["serde"] }
+reth-node-api = { git = "https://github.com/paradigmxyz/reth",rev="9c8360e" }
+reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth",rev="9c8360e" }
+reth-tracing = { git = "https://github.com/paradigmxyz/reth",rev="9c8360e" }
+reth-execution-types = { git = "https://github.com/paradigmxyz/reth",rev="9c8360e" }
+reth-rpc-types-compat = { git = "https://github.com/paradigmxyz/reth",rev="9c8360e" }
+reth-primitives = { git = "https://github.com/paradigmxyz/reth",rev="9c8360e" }
 
 futures-util = "0.3.30"
 
@@ -39,7 +39,7 @@ bincode = "1.3"
 tonic-build = "0.12"
 
 [dev-dependencies]
-reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth", tag="v1.1.0" }
+reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth",rev="9c8360e" }
 
 [[bin]]
 name = "exex_grpc_node"
